--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "daisyui": "^5.0.27",
     "framer-motion": "^12.5.0",
     "next": "15.2.3",
     "react": "^19.0.0",
